<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
        <TextView
            android:fontFamily="@font/proxima_nova"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/send_repass_mail_this_mail"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/forgot_mail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/sifirlaBtn"
            android:background="@drawable/btn_login_shape"
            android:text="@string/send_forget_mail"
            android:layout_width="wrap_content"
            android:fontFamily="@font/proxima_nova"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>



    </LinearLayout>
</androidx.cardview.widget.CardView>